2006-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak):
	  Fix crash dereferencing NULL pointer if there's no stco atom.
	  Fixes #387122.

2006-12-18  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/wavpack/gstwavpackenc.h:
	Use local copy of md5.h, as it disappeared in recent wavpack
	installs.
	Patch by: Sebastian Dröge <slomo at ubuntu dot com>
	Fixes: #387076

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_get_src_query_types),
	(gst_qtdemux_handle_src_query), (gst_qtdemux_handle_src_event):
	  We don't support seeking in streaming mode, so don't even try.
	  Implement seeking query so apps can query seekability properly
	  (see #365414). Fix duration query.

2006-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* gst-plugins-bad.doap:
	* gst-plugins-bad.spec.in:
	  add doap file

2006-12-15  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/libmms/gstmms.c: (gst_mms_create):
	  These debug statements should be using LOG level.

2006-12-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/modplug/libmodplug/sndfile.cpp:
	  Fix potential buffer overflow (CVE-2006-4192) (#385788).

2006-12-13  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_get_duration),
	(gst_qtdemux_handle_src_query), (qtdemux_parse_trak),
	(qtdemux_audio_caps):
	Add AMR-WB to the list of supported formats.

2006-12-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/neon/gstneonhttpsrc.c: (gst_neonhttp_src_create),
	(send_request_and_redirect):
	  Fix minor mem leak in redirect code.

	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:
	* tests/check/elements/neonhttpsrc.c: (handoff_cb),
	(GST_START_TEST), (neonhttpsrc_suite):
	* tests/check/gst-plugins-bad.supp:
	  Add super-basic unit test for #384140.

2006-12-12  Tim-Philipp Müller  <tim at centricular dot net>
