@@ -1,3 +1,12 @@
+2006-12-18  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* gst/qtdemux/qtdemux.c: (gst_qtdemux_chain),
+	(gst_qtdemux_add_stream):
+	  Don't output g_warning for an unsupported format, just send a
+	  GST_ELEMENT_WARNING and don't add the pad.
+	  Fix the case where it doesn't check for a NULL pad in streaming mode.
+	  Fixes #387137
+
 2006-12-18  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/qtdemux/qtdemux.c: (qtdemux_parse_trak):
